--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -30,8 +30,8 @@ jobs:
           aws-region: us-east-1
 
       - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
+        id: liandriroosevelt2904@gmail.com
+        uses: Remniscent@123
 
       - name: Build, tag, and push image to Amazon ECR
         env:
